# Preness_FastAPI_02

./: .env.example  .gitignore  CLAUDE.md  CONTENT_COUNT_VALIDATION.md  README.md  analysis_full_payload.json  analysis_short_payload.json  api_config.yaml  pyproject.toml  requirements.txt  speech_config.yaml
.githooks/: commit-msg
app/: main.py
app/core/: config.py  security.py
app/db/: __init__.py  base.py  models.py  session.py
app/schemas/: analysis.py  exercises.py  generation.py  import_payload.py  mocks.py
app/services/: exercise_service.py  hand_made_importer.py  mock_service.py  rails_client.py  rails_payload_normalize.py
app/workers/: analysis_tasks.py  celery_app.py  generation_tasks.py
docs/: architecture.md  problem_format.md
prompts/completed/: FM01_Listening_Part_A.txt  FM02_Listening_Part_B.txt  FM03_Listening_Part_C.txt  FM04_Grammar_Part_A.txt  FM05_Grammar_Part_B.txt  FM06_Reading_Long3.txt  FM06_Reading_Short2.txt  P01_Listening_Part_A.txt  P04_Grammar_Part_A.txt  P05_Grammar_Part_B.txt  P06_Reading_Long.txt  P06_Reading_Short.txt  SM03_Listening_Part_C.txt  SM04_Grammar_Part_A.txt  SM05_Grammar_Part_B.txt  SM06_Reading.txt
scripts/: gd_import.py  hand_made.py  reimport.py  run_practice_check.py  setup-git-hooks.sh  strip_cursor_commit_trailer.py
tests/: conftest.py  test_exam_inference.py  test_generation_tasks.py  test_hand_made_importer.py  test_import_pipeline.py  test_markers.py  test_payload_builder.py  test_rails_payload_normalize.py  test_reading_content.py  test_report_generator.py  test_report_generator_short.py
(+30 files in other folders)
