[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "preness-content-ingestion"
version = "0.1.0"
description = "Preness Content Ingestion API (FastAPI + Celery)"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
